--- a/Ders5/app/src/main/res/layout/activity_aramabaslat.xml
+++ b/Ders5/app/src/main/res/layout/activity_aramabaslat.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,11 +8,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,20 +23,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Numara"
-            android:inputType="phone"
-            />
+            android:inputType="phone" />
 
         <Button
             android:id="@+id/btn_aramabaslat_ara"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="50dp"
-            android:text="ARA"
             android:background="@color/darkgray"
-            android:textColor="@color/colorWhite"
-            />
+            android:text="ARA"
+            android:textColor="@color/colorWhite" />
 
     </LinearLayout>
-
 
 </android.support.constraint.ConstraintLayout>
