endeks hesapla setup

--- a/Ders6/app/src/main/res/layout/activity_main.xml
+++ b/Ders6/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_bottomnavigation"/>
 
 
 </android.support.constraint.ConstraintLayout>
