--- a/MyTicketApp/app/src/main/res/layout/login.xml
+++ b/MyTicketApp/app/src/main/res/layout/login.xml
@@ -61,6 +61,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
+ <Button
+     android:id="@+id/btn_login_kayitol"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:text="KAYIT OL"
+
+     app:layout_constraintTop_toBottomOf="@id/btn_login"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     android:layout_marginTop="16dp"/>
+
+
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
