--- a/MyTicketApp/app/src/main/res/layout/activity_register.xml
+++ b/MyTicketApp/app/src/main/res/layout/activity_register.xml
@@ -9,54 +9,57 @@
         android:id="@+id/ll_kayitolgiris"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical"
-        android:layout_marginStart="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
 
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <EditText
             android:id="@+id/et_adgiris"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Ad Giriniz.."
             android:layout_marginTop="40dp"
+            android:hint="Ad Giriniz.."
 
             />
-       <EditText
-           android:id="@+id/et_emailgiris"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:hint="Email Giriniz.."
-           android:layout_marginTop="45dp"
+
+        <EditText
+            android:id="@+id/et_emailgiris"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:hint="Email Giriniz.."
 
 
-           />
+            />
+
         <EditText
             android:id="@+id/et_sifregiris"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Şifre Giriniz.."
             android:layout_marginTop="50dp"
-            />
+            android:hint="Şifre Giriniz.." />
+
         <CheckBox
             android:id="@+id/cb_sozlesme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sözleşmeyi Okudum"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
+
         <Button
             android:id="@+id/btn_kayitol"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Kayıt Ol"
-            android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="15dp"
-            />
+            android:layout_marginEnd="40dp"
+            android:hint="Kayıt Ol" />
 
 
     </LinearLayout>
