bilet ekle fragment setup

--- a/MyTicketApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MyTicketApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_biletekle"
             android:icon="@drawable/ic_launcher_foreground"
-            android:title="Ana Sayfa" />
+            android:title="Bilet Ekle(Admin)" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_launcher_foreground"
