--- a/MyTicketApp/app/src/main/res/layout/fragment_profile.xml
+++ b/MyTicketApp/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/image"
+        android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
